frontend son duzenlemeler